iitterbug 3327: test icu4j applet behavior
X-SVN-Rev: 13730